# cmakesdl2window

./: .gitignore  CMakeLists.txt  FindSDL2.cmake  README.md  SDL2Window.cpp  build.bat  debugrun.bat
docs/: links.md
